tests/ui/reflection/variant_index_out_of_bounds.stderr
error[E0080]: indexing out of bounds: the len is 2 but the index is 2
  --> $DIR/variant_index_out_of_bounds.rs:8:5
   |
LL |     TypeId::of::<Option::<()>>().fields(2);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_::{constant#0}` failed inside this call
   |
note: inside `type_info::<impl TypeId>::fields`
  --> $SRC_DIR/core/src/mem/type_info.rs:LL:COL

note: erroneous constant encountered
  --> $DIR/variant_index_out_of_bounds.rs:7:15
   |
LL |   const _: () = const {
   |  _______________^
LL | |     TypeId::of::<Option::<()>>().fields(2);
LL | |
LL | | };
   | |_^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
